tenant/tenant-a/nginx_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - "tenant-a.traefik.local"
  rules:
    - backendRefs:
        # TODO: 
        # This is supposed to point to the virtual service, but it doesn't get translated, it is copied as it is.
        # Raise a PR upstream to translate Services in HTTPRoutes
        - kind: Service
          name: nginx-x-default-x-vcluster-a 
          namespace: vcluster-a 
          port: 80
